fix/version iphone proof

--- a/css/style.css
+++ b/css/style.css
@@ -742,7 +742,7 @@ main {
     height: 101%;
   }
   section {
-    height: 110vh;
+    height: 79vh;
     margin: 20px 20px 20px 20px;
   }
   .header__sub-title h4 {
